# resources/js/lib/types/index.ts
@@ -3,6 +3,7 @@ export type * from './navigation';
 export type * from './ui';
 export type {
     ArticleModel,
+    EventModel,
     HomepageModel,
     PageModel,
     ImageData,
